--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -23,7 +23,7 @@ html{
 }
 
 .principal{
-    background-color: black;
+    background-image: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(2,82,12,1) 100%);;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .principal__titulo{
